Fix Attempt to fix double scroll bar(Untested) Refactor Footer as a component

--- a/react/src/components/Sidebar.css
+++ b/react/src/components/Sidebar.css
@@ -61,6 +61,9 @@
   -o-transition: left 250ms ease;
   transition: left 250ms ease;
 }
+.nav::-webkit-scrollbar {
+  display: none;
+}
 .nav a {
   text-decoration: none;
 }
