--- a/react/src/pages/admin.css
+++ b/react/src/pages/admin.css
@@ -15,14 +15,14 @@ hr {
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
-:global(#root) {
-  .footer {
-    text-align: center;
-  }
-  .footer a {
-    color: inherit;
-    text-decoration: underline;
-  }
+:global(.footer) {
+  text-align: center;
+}
+:global(.footer a) {
+  color: inherit;
+  text-decoration: underline;
+}
+:global {
   .fade-enter .fade-leave-active {
     opacity: 0;
   }
