--- a/react/src/pages/app.css
+++ b/react/src/pages/app.css
@@ -15,7 +15,14 @@ hr {
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
-:global(#root) {
+:global(.footer) {
+  text-align: center;
+}
+:global(.footer a) {
+  color: inherit;
+  text-decoration: underline;
+}
+:global {
   .fade-enter .fade-leave-active {
     opacity: 0;
   }
